# path_tracing

./: CMakeLists.txt  RenderLibrary.cpp  RenderLibrary.h  RenderTools.cpp  RenderTools.h  main.cpp
data/: cornel_box0.iof  scriptRGB.py
igor_code/: code.cpp  code.txt  txt_to_nit.py
